fixed bug by adding z-index: 20; to contactBar styles in Home.module.scss

--- a/aot-next-front/styles/Home.module.scss
+++ b/aot-next-front/styles/Home.module.scss
@@ -38,10 +38,15 @@
     background-color: $colour1;
     color: white;
     border-bottom-left-radius: 8px;
+    z-index: 20;
     // font-size: 12px;
 
     li {
-      margin: 0 .5em
+      margin: 0 .5em;
+
+      &:hover{
+        color: $colour5
+      }
     }
   }
 
